# garbage-optimal-path-finder-cpp

./: CMakeLists.txt  GarbageLocations.h  GreedyRoute.h  MapMatrix.h  NonOptimizedRoute.h  ORoutput.txt  OptimizedRoute.h  README.md  TSPRoute.h  main.cpp  wasteLevel.h
data/: Config.cpp  Config.h
data/records/: BestROutput.txt  participants.txt
src/authentication/: Participant.cpp  Participant.h
src/collection/: InputCollector.cpp  InputCollector.h
src/filesystem/: FileReader.cpp  FileReader.h  FileWriter.h
src/maps/: Locations.h  MapMatrix.h
src/metrics/: Metrics.h
src/routes/: GreedyRoute.h  NonOptimizedRoute.h  OptimizedRoute.h  TSPRoute.h
utils/: Converter.h
